--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -73,7 +73,6 @@
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   color: $medium-beige;
-  background-color: $beige-transparent;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
 }
 
@@ -102,7 +101,7 @@
   margin: 2rem 0;
   padding: 2rem;
   border-radius: 0.5rem;
-  color: $dark-gray;
+  color: white;
 }
 
 // IMAGE UPLOAD ELEMENTS
