--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -1,8 +1,10 @@
 $medium-beige: rgb(255, 190, 141);
 $light-beige: rgb(255, 217, 187);
+$light-gray: rgb(211, 211, 211);
 $medium-gray: rgb(135, 135, 135);
 $dark-gray: rgba(35, 34, 34, 1);
 $dark-gray-transparent-9: rgba(35, 34, 34, 0.95);
 $dark-gray-transparent: rgba(29, 29, 29, 0.7);
 $red-brown: rgb(40, 21, 0);
 $beige-transparent:rgba(255, 190, 141, 0.4);
+$light-red: rgb(242, 180, 180);
