--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -11,41 +11,38 @@
 
 .show-metrics-container {
   display: flex;
-  flex-flow: column wrap;
-  margin-bottom: 2rem;
+  flex-flow: column;
+  margin-bottom: 1rem;
   padding: 2rem;
-  border: 1px solid white;
-  border-radius: 0.5rem;
-  width: 40%;
+  border: 2px solid $light-gray;
+  border-radius: 0.2rem;
   min-width: 300px;
-  color: white;
+  color: $light-gray;
   font-weight: bold;
 }
 
 .added-wood-tile-container {
   display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   justify-content: center;
-  flex-flow: row wrap;
-  color: $medium-beige;
-  border-radius: 0.5rem;
-  width: 60%;
-  min-width: 240px;
+  width: 90%;
+  margin: 1rem;
 }
 
 .added-wood-tile {
   display: flex;
-  flex-flow: row-wrap;
+  flex-flow: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: $dark-gray-transparent-9;
-  color: $medium-beige;
-  margin: 0.25rem;
+  color: $light-gray;
+  margin: 0.2rem;
   padding: 0.25rem;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
-  border-radius: 0.5rem;
-  width: 40%;
-  min-width: 250px;
-  max-height: 120px;
+  border: 2px solid $light-gray;
+  border-radius: 0.2rem;
+  min-width: 350px;
+  height: auto;
   font-weight: bold;
   
 }
@@ -69,7 +66,7 @@
 #delete-persisted-wood-button:hover,
 #delete-image-button:hover {
   cursor: pointer;
-  background-color: $medium-beige;
+  background-color: white;
 }
 
 .add-woods-container {
@@ -82,7 +79,7 @@
   padding: 2rem;
   min-width:70%;
   background-color: $dark-gray-transparent-9;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   color: $medium-beige;
 }
@@ -116,7 +113,7 @@
   border: 0.2rem solid $medium-beige;
   background-color: $dark-gray;
   color: white;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   width: 80px;
   height: 30px;
 }
@@ -140,7 +137,7 @@
   color: $medium-beige;
   border: 3px solid $medium-beige;
   background-color: $dark-gray;
-  border-radius: 1rem;
+  border-radius: 0.2rem;
   padding: 0.5rem;
   width: 150px;
   height: 55px;
@@ -164,7 +161,7 @@
   color: $medium-beige;
   border: 3px solid $medium-beige;
   background-color: $dark-gray;
-  border-radius: 1rem;
+  border-radius: 0.2rem;
   margin-top: 1rem;
   padding: 0.5rem;
   width: 150px;
@@ -191,7 +188,7 @@
 
 .remove-wood-x { 
   color: $medium-beige;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   padding: 0.18rem;
   margin-left: 1.5rem;
 }
