more style and logic updates

--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -8,3 +8,4 @@ $dark-gray-transparent: rgba(29, 29, 29, 0.7);
 $red-brown: rgb(40, 21, 0);
 $beige-transparent:rgba(255, 190, 141, 0.4);
 $light-red: rgb(242, 180, 180);
+$white-transparent: rgba(255, 255, 255, 0.1);
