--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   border-radius: 0.2rem;
-  background-color: $dark-gray-transparent-9;
   color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   padding: 1.5rem;
@@ -131,13 +130,15 @@
 #auth-button:hover,
 #all-buttons:hover {
   color: black;
-  background-color: $beige-transparent;
+  background-color: white;
+  border: black
 }
 
 #highlighted-button {
-  background-color: $medium-beige;
-  color: black;
-  border-ra2ius: 0.5rem;
+  background-color: black;
+  color: white;
+  border-radius: 0.2rem;
+  border: 4px solid $white;
 }
 
 #subject {
@@ -168,5 +169,5 @@
 }
 
 .button {
-  bo2der-radius: 0.5rem;
+  border-radius: 0.2rem;
 }
