--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -3,15 +3,17 @@
 .woods-metrics-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
-  padding: 1rem;
-  margin-bottom: 2rem;
-  min-width: 90%;
+  margin: 1rem auto;
 }
 
 .show-metrics-container {
+  text-align: center;
   display: flex;
   flex-flow: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 1rem;
   padding: 2rem;
   border: 2px solid $light-gray;
@@ -21,13 +23,22 @@
   font-weight: bold;
 }
 
+.metrics-container-child {
+  display: flex;
+  flex-flow: row;
+  gap: 1rem
+}
+
+.metrics-label {
+  color: $medium-beige
+}
+
 .added-wood-tile-container {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
   align-items: center;
   justify-content: center;
-  width: 90%;
-  margin: 1rem;
+  margin: 1rem auto;
 }
 
 .added-wood-tile {
@@ -35,12 +46,7 @@
   flex-flow: row;
   align-items: center;
   justify-content: space-between;
-  background-color: $dark-gray-transparent-9;
   color: $light-gray;
-  margin: 0.2rem;
-  padding: 0.25rem;
-  border: 2px solid $light-gray;
-  border-radius: 0.2rem;
   min-width: 350px;
   height: auto;
   font-weight: bold;
@@ -71,7 +77,7 @@
 
 .add-woods-container {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
@@ -120,7 +126,7 @@
 
 .show-added-wood {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
   padding: 2px;
