--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -7,6 +7,7 @@
   flex-flow: column-reverse;
   margin: 0 auto;
   padding: 0.2rem;
+  align-items: center;
   justify-content: center;
   column-gap: 2rem;
   width: 98%
@@ -72,24 +73,23 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   padding: 1.5rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
   color: $medium-beige;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
 }
 
 .project-show-headers {
+  text-align: center;
   display: flex;
   justify-content: center;
-  flex-flow: column wrap;
+  align-items: center;
+  flex-flow: column;
   gap: 1rem;
   background-color: $dark-gray-transparent-9;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   color: $medium-beige;
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   border-radius: 0.2rem;
+  margin-bottom: 2rem;
   width:fit-content;
 }
 
@@ -106,6 +106,7 @@
   padding: 2rem;
   border-radius: 0.2rem;
   color: white;
+  text-align: center;
 }
 
 // IMAGE UPLOAD ELEMENTS
@@ -116,24 +117,22 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
-  padding: 2rem;
+  width: 100%;
+  padding: 1rem;
   background-color: $dark-gray-transparent-9;
   border-radius: 0.2rem;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   color: $medium-beige;
 }
 
 .dropzone-drop-container {
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid $medium-beige;
   height: auto;
   margin: 1rem;
   margin-bottom: 2rem;
   padding: 0.5rem;
-  border-radius: 0.2rem;
 }
 
 .drop-button-and-message {
@@ -184,7 +183,7 @@
 
 .dropzone-image {
   height: auto;
-  width: 200px;
+  width: 150px;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   border-radius: 0.2rem;
 }
