user can now change a customer status via drop down menu that appears after clicking the current status

--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -97,7 +97,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: space-evenly;
+}
+
+.project-show-header-details {
+  display: flex;
+  flex-flow: row;
   align-items: center;
+  gap: 1.5rem;
+}
+
+.project-show-header-details-child {
+  display: flex;
+  color: white;
+  font-weight: normal;
+  margin-bottom: 0;
 }
 
 .project-description {
