--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -19,7 +19,7 @@ h4 {
   align-items: center;
   justify-content: center;
   border-radius: 0.2rem;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  box-shadow: $box-shadow;
   background-color: $dark-gray-transparent-9;
   color: $medium-beige;
   padding: 1rem;
