--- a/client/src/assets/scss/stylesheets/settings-user-project.scss
+++ b/client/src/assets/scss/stylesheets/settings-user-project.scss
@@ -6,7 +6,7 @@
   align-items: center;
   border-radius: 0.2rem;
   color: $medium-beige;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  box-shadow: $box-shadow;
   padding: 1.5rem;
   width: fit-content;
   height: fit-content;
