--- a/client/src/assets/scss/stylesheets/_colors.scss
+++ b/client/src/assets/scss/stylesheets/_colors.scss
@@ -8,3 +8,4 @@ $red-brown: rgb(40, 21, 0);
 $beige-transparent:rgba(255, 190, 141, 0.4);
 $light-red: rgb(242, 180, 180);
 $white-transparent: rgba(255, 255, 255, 0.1);
+$box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
