--- a/client/src/assets/scss/stylesheets/popups.scss
+++ b/client/src/assets/scss/stylesheets/popups.scss
@@ -13,7 +13,7 @@
   max-height: min-content;
   background-color: $medium-beige;
   border: 0.25rem solid $red-brown;
-  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
+  box-shadow: $box-shadow;
 }
 
 .wood-popup {
