--- a/client/src/assets/scss/stylesheets/signInOutForms.scss
+++ b/client/src/assets/scss/stylesheets/signInOutForms.scss
@@ -13,7 +13,7 @@
 //   color: $medium-beige;
 //   background-color: $dark-gray-transparent-9;
 //   border-radius: 0.2rem;
-//   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+//   box-shadow: $box-shadow;
 // }
 
 // .auth-email,
@@ -29,7 +29,7 @@
 //   border: 1.5px solid $medium-beige;
 //   background-color: $dark-gray;
 //   color: $medium-beige;
-//   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+//   box-shadow: $box-shadow;
 // }
 
 // #auth-button {
@@ -39,7 +39,7 @@
 //   color: $medium-beige;
 //   background-color: $dark-gray;
 //   font-weight: bolder;
-//   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+//   box-shadow: $box-shadow;
 //   margin: 1.5rem
 // }
 
