--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -1,5 +1,3 @@
-@import "../stylesheets/colors.scss";
-
 h4 {
   font-weight: bold;
 }
@@ -25,7 +23,12 @@ h4 {
   padding: 1rem;
   width: 300px;
   height: 150px;
-  gap: 0.5rem
+  gap: 0.5rem;
+  &:hover {
+    cursor: pointer;
+    color: white;
+    background-color: $dark-gray-transparent;
+  }
 }
 
 .hardwood-tile-wood-name {
@@ -39,17 +42,4 @@ h4 {
   height:120px;
   width: 120px;
   border-radius: 0.2rem;
-}
-
-.hardwood-tile:link {
-  color: $red-brown;
-}
-.hardwood-tile:visited {
-  color: $red-brown;
-}
-.hardwood-tile:hover {
-  cursor: pointer;
-  color: white;
-  background-color: $dark-gray-transparent;
-
 }
