--- a/client/src/assets/scss/stylesheets/topLinks.scss
+++ b/client/src/assets/scss/stylesheets/topLinks.scss
@@ -1,5 +1,3 @@
-@import "./colors.scss";
-
 .top-links {
   color:$medium-beige;
   font-weight: bold;
@@ -24,19 +22,12 @@ ul {
 }
 
 .link-item {
-  padding: 0.5rem
+  padding: 0.5rem;
+  &:hover {
+    cursor: pointer;
+    color: white;
+  }
 } 
-
-.link-item:link {
-  color: $medium-beige;
-}
-.link-item:visited {
-  color: $medium-beige;
-}
-.link-item:hover {
-  cursor: pointer;
-  color: white;
-}
 
 .logged-in-links,
 .non-logged-in-links {
@@ -52,23 +43,4 @@ ul {
 
 .home-link {
   align-self: left;
-}
-
-.sign-out-button {
-  color: $medium-beige;
-  font-weight: bold;
-  max-width: 100px;
-  margin-left: 1rem;
-}
-
-.sign-out-button:link {
-  color: $red-brown;
-}
-.sign-out-button:visited {
-  color: $red-brown;
-}
-.sign-out-button:hover {
-  cursor: pointer;
-  color: white;
-  background-color: $dark-gray-transparent;
 }
