--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,6 +17,7 @@
 @import "../scss/stylesheets/projects.scss";
 @import "../scss/stylesheets/projectMetrics.scss";
 @import "../scss/stylesheets/settings-user-project.scss";
+@import "../scss/stylesheets/twilio.scss";
 
 @import "../scss//stylesheets/forms.scss";
 @import "../scss/stylesheets/signInOutForms.scss";
